--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2563,107 +2563,107 @@ stories:
   domain: http://www.newsargus.com/
   link: https://www.newsargus.com/news/seven-springs-to-have-fireworks-holiday-celebration/article_26f4bc0a-9cbe-11e9-ab0a-b3d6d9dc0a2a.html
 images:
-- name: hollywood-building-hollywood-building-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-far-away.jpg
-- name: ellis-island-ellis-island-room-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-dali.jpg
-- name: scream-IMG_8318.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8318.jpg
-- name: beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
-- name: docks-docks-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-brush.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
-- name: berlinwall-DSC-0084-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-yellow-collage.jpg
-- name: eduardo-eduardo-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-crabapple.jpg
-- name: old-cabin-oldcabin-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-hot-spicy.jpg
-- name: oldhotel-oldhotel-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dali-two.jpg
-- name: old-church-oldchurch-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-crabapple.jpg
-- name: bluelake-crafty-painting-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-00-00-00.jpg
-- name: nazi-invasion-DSC_0115.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0115.jpg
-- name: docks-docks-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-really-hot.jpg
-- name: stories-old-barn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-barn.jpg
-- name: border-crossing-bordercrossing-plentiful.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-plentiful.png
-- name: store-on-corner-store-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-bright-sand.jpg
-- name: christianity-christianity-under-construction-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-electricity.jpg
-- name: rockingchair-face-2-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crabapple.jpg
-- name: art-museum-art-museum-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-atari-missle.jpg
-- name: white-house-whitehouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dali-three.jpg
-- name: ellis-island-ellisisland-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-aqua.jpg
-- name: status-berlin-status-berlin-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-crunch-paper.jpg
-- name: berlinwall2-berlinwall-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-sand-paper.jpg
-- name: cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-- name: dragon-desert-desert-dragon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-dali.jpg
-- name: oldtrain-oldtrain-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-internet-numbers.jpg
-- name: server-cloud-server-racks-door-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-matrix.jpg
-- name: bluelake-creativity-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-38-67.jpg
-- name: berlinwall2-berlinwall-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-purple-storm.jpg
-- name: oldsmallboat-oldsmallboat-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-yellow-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-marcel-duchamp.jpg
-- name: machine-road-machine-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road.jpg
-- name: rain-princess-IMG_7831.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7831.jpg
-- name: abandonedbuildings_post_modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_post_modern.jpg
-- name: art-museum-art-museum-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-rain.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-umberto-bocc.jpg
-- name: cannon-facing-cannon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-dark-dali.jpg
-- name: capital-battle-capitolbattle-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purp-paper.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-rain.jpg
-- name: docks-docks-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-wols.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-purple-storm.jpg
-- name: old-door-lock-old-door-lock-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-cinnamon-rolls.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-deep-connections.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-deep-connections.png
-- name: gypsymosaic-gypsy-eyes-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-spagetti-accident.jpg
-- name: downtown-trucksilo-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-post-modern.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-bright-sand.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-bright-sand.png
-- name: meadowbutterfly-meadow-butterfly-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-plentiful.jpg
-- name: window-window-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-matrix.jpg
-- name: birdhouse-birdhouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse.jpg
-- name: oldtrain-oldtrain-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-attack-planes.jpg
+- name: powerlines-power-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-kandinsky-bv.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dry-skin.jpg
+- name: abandonedbuildings_ww2_dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_ww2_dresden.jpg
+- name: crow_colorful_dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_dream.jpg
+- name: white-house-lawn-white-house-window-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-light-dali.jpg
+- name: razorcliff-razorcliff-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purple-pond.jpg
+- name: rockingchair-face-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colorful-dream.jpg
+- name: death-valley-death-valley-national-park-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-pablo-blue.jpg
+- name: downtown-los-angeles-downtown-la-space-pizza.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-space-pizza.JPG
+- name: store-on-corner-oldcabin-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-emily-carr.jpg
+- name: razorwire-DSC-0080-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-sunday.jpg
+- name: amusement-park-amusement-park-2-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-5.jpg
+- name: sand-hand-sand-hand-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-colored-circuits.jpg
+- name: machine-road-machine-road-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-hot-spicy.jpg
+- name: server-cloud-server-racks-clouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-oily-mcoilface.jpg
+- name: dc-statue-dcstatue-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-plentiful.jpg
+- name: bordercrossing-bordercrossing-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-matrix.jpg
+- name: crow_purple_pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_pond.jpg
+- name: gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
+- name: curtain-curtain-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-aqua.jpg
+- name: fence-fence-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crabapple.jpg
+- name: containership-containership-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-marcel-duchamp.jpg
+- name: subway-subway-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-satan-red.jpg
+- name: fence-mexico-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-circuit.jpg
+- name: liberty-back-statue-liberty-back-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-atari-asteroids.jpg
+- name: power-lines-power-lines-empty-space-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
+- name: amusement-park-amusement-park-2-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-diego-rivera1.jpg
+- name: paris-paris-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-internet-numbers.jpg
+- name: oldcabin-store-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dark-dali.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-aqua.jpg
+- name: christianity-christianity-under-construction-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gan-vogh.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-gred-mash.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-gred-mash.JPG
+- name: mistywoods-babyfoot-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-purple-pond.jpg
+- name: statue-of-liberty-front-view-statueofliberty-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-diego-rivera1.jpg
+- name: cargo-ship-cargo-ship-on-sea-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-sand-paper.jpg
+- name: mistywoods-babyfoot-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-creativity.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
+- name: statue-of-liberty-front-view-statueofliberty-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-plentiful.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crunch-paper.jpg
+- name: dragon-desert-desert-dragon-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-pablo-blue.jpg
+- name: hollywood-building-hollywood-building-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-creativity.jpg
+- name: legal-statue-legalstatue-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crabapple.jpg
+- name: razorcliff-razorcliff-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-matrix.jpg
+- name: gypsy-wagon-gypsywagon-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purp-paper.jpg
+- name: power-lines-power-lines-empty-space-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit-5.jpg
+- name: old-church-oldchurch-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-rain.jpg
+- name: razorwire-DSC-0080-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-far-away.jpg
+- name: adam-smith-adam-smith-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit-2.jpg
+- name: old-church-oldchurch-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purple-storm.jpg
+- name: power-lines-power-lines-empty-space-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-sand-paper.jpg
+- name: bordercrossing-bordercrossing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing.jpg
 ---
 The Ongoing Saga Of A Girl And Her Scale.&nbsp;Golden Girls Appears To Get Better With Pop Culture Age.&nbsp;Michigan State Police Urge Motorists To Make Safe Driving Decisions This July 4th.&nbsp;Welcome Mat Winners Announced.&nbsp;Fun And Games At Summer Fest.&nbsp;Striking Drivers Appeal To Selectmen For Support.&nbsp;Council Edges Toward Approval Of Road Repair Fee.&nbsp;Judge Throws Out Lawsuit Against Pipeline.&nbsp;
